vlib/v/parser/tests/generic_interface_decl_err.vv
module main

interface Abc {
	test[T]()
}

struct Xyz {}

fn (xyz Xyz) test[T]() {}

fn main() {
	_ := Abc(Xyz{})
}
